Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-61217

Compile failure on Sonoma 14.4 with clang 15.0.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • Morpheus
    • Morpheus
    • ns_server
    • None
    • Untriaged
    • 0
    • Unknown

    Description

      The build is extremely noisy and reports 191 warnings and finally errors with:

      /Users/trondnorbye/compile/trunk/ns_server/c_src/enacl_nif.c:430:83: error: incompatible function pointer types initializing 'void (*)(ErlNifEnv *, void *)' (aka 'void (*)(struct enif_environment_t *, void *)') with an expression of type 'int (ErlNifEnv *, void **, ERL_NIF_TERM)' (aka 'int (struct enif_environment_t *, void **, unsigned long)') [-Wincompatible-function-pointer-types]
      ERL_NIF_INIT(enacl_nif, nif_funcs, enacl_crypto_load, NULL, enacl_crypto_upgrade, enacl_crypto_unload);
                                                                                        ^~~~~~~~~~~~~~~~~~~
      /Users/trondnorbye/compile/trunk/cmake-install-debug/lib/erlang/erts-14.2/include/erl_nif.h:432:25: note: expanded from macro 'ERL_NIF_INIT'
              LOAD, RELOAD, UPGRADE, UNLOAD,  \
                                     ^~~~~~
       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              timofey.barmin Timofey Barmin
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty