MB-61217: [enacl] Get rid of clang15 compilation errors

According to erlang doc proper typing for UNLOAD is
void (*unload)(ErlNifEnv* caller_env, void* priv_data)

Error:
enacl_nif.c:430:83: error: incompatible function pointer types
initializing

'void (*)(ErlNifEnv *, void *)'

with an expression of type

'int (ErlNifEnv *, void **, ERL_NIF_TERM)'

Also suppress the "pointer is missing a nullability type specifier"
warnings.

Change-Id: I3398113536cdab6fc7927368e2aa426e717cda16
Reviewed-on: https://review.couchbase.org/c/ns_server/+/207413
Tested-by: Timofey Barmin <timofey.barmin@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>